--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URL = "mongodb+srv://jalmpa77:Adso45**@adso45.to30h.mongodb.net/Usuarios?retryWrites=true&"
+MONGO_URL = "mongodb+srv://jalmpa77:ADSOVIRTUAL@virtual.ui3qi.mongodb.net/datos?retryWrites=true&w=majority&appName=VIRTUAL"
