--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-MONGO_URL = "mongodb+srv://jalmpa77:ADSOVIRTUAL@virtual.ui3qi.mongodb.net/datos?retryWrites=true&w=majority&appName=VIRTUAL"
+MONGO_URL=mongodb+srv://jalmpa77:ADSOVIRTUAL@virtual.ui3qi.mongodb.net/datos?retryWrites=true&w=majority&appName=VIRTUAL
+PORT=8081
