--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cross": "^1.0.0",
+    "dotenv": "^17.2.2",
     "express": "^4.19.2",
     "mongoose": "^8.7.0",
     "mysql": "^2.18.1",
