--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL=MONGO_URL=mongodb+srv://jalmpa77:Alexito77_2025@virtual.ui3qi.mongodb.net/datos?retryWrites=true&w=majority&appName=VIRTUAL
+MONGO_URL=mongodb+srv://jalmpa77:Alexito77_2025@virtual.ui3qi.mongodb.net/datos?retryWrites=true&w=majority&appName=VIRTUAL
 
